data pre-processing is good to go and now will write out files to your local drive

--- a/module 3 final assignment/final assignment part 2.ipynb
+++ b/module 3 final assignment/final assignment part 2.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +54,8 @@
     "import numpy as np\n",
     "# for image processing\n",
     "import os\n",
+    "# for progress bars\n",
+    "from tqdm import tqdm\n",
     "\n",
     "# Change directory location as needed. This should be the root of the unzipped dataset and the initial folder visible shuold be \"triple_mnist\" \n",
     "# -------------------------------------------\n",
@@ -99,10 +101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# --------------------------------------------------------------------------\n",
     "# this is the function will crop a triplet digit image into three separate images and return them as a list of three images.\n",
     "# this function does not manage disk persistence, it is only for in-memory processing\n",
     "def crop_image(image):\n",
@@ -115,18 +118,13 @@
     "    x_centers = [14, 42, 70]\n",
     "    y_centers = [42, 42, 42]\n",
     "    # create the three cropped images\n",
+    "    image_return = [None, None, None]\n",
     "    for i in range(3):\n",
     "        image_return[i] = image.crop((x_centers[i]-x_croplength, y_centers[i]-y_croplength, x_centers[i]+x_croplength, y_centers[i]+y_croplength))\n",
     "        \n",
-    "    return image_return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return image_return\n",
+    "\n",
+    "# --------------------------------------------------------------------------\n",
     "# this function lets us look at our images in the datasets\n",
     "# let's peek into the dataset by loading the first batch of num_to_show images\n",
     "def datset_peek(idg_show: ImageDataGenerator, num_to_show: int):\n",
@@ -137,7 +135,7 @@
     "        ax[i].imshow(np.squeeze(idg_show[0][0][i]), cmap='gray')\n",
     "        ax[i].set_title(f'Label: {idg_show[0][1][i]}')\n",
     "        ax[i].axis('off')\n",
-    "    plt.show()\n"
+    "    plt.show()"
    ]
   },
   {
@@ -179,113 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "folder index 0: 0_000.png loaded successfully from z:\\triple_mnist\\train\\000\\0_000.png.\n",
-      "folder index 0: 10_000.png loaded successfully from z:\\triple_mnist\\train\\000\\10_000.png.\n",
-      "folder index 0: 11_000.png loaded successfully from z:\\triple_mnist\\train\\000\\11_000.png.\n",
-      "folder index 0: 12_000.png loaded successfully from z:\\triple_mnist\\train\\000\\12_000.png.\n",
-      "folder index 0: 13_000.png loaded successfully from z:\\triple_mnist\\train\\000\\13_000.png.\n",
-      "folder index 0: 14_000.png loaded successfully from z:\\triple_mnist\\train\\000\\14_000.png.\n",
-      "folder index 0: 15_000.png loaded successfully from z:\\triple_mnist\\train\\000\\15_000.png.\n",
-      "folder index 0: 16_000.png loaded successfully from z:\\triple_mnist\\train\\000\\16_000.png.\n",
-      "folder index 0: 17_000.png loaded successfully from z:\\triple_mnist\\train\\000\\17_000.png.\n",
-      "folder index 0: 18_000.png loaded successfully from z:\\triple_mnist\\train\\000\\18_000.png.\n",
-      "folder index 0: 19_000.png loaded successfully from z:\\triple_mnist\\train\\000\\19_000.png.\n",
-      "folder index 0: 1_000.png loaded successfully from z:\\triple_mnist\\train\\000\\1_000.png.\n",
-      "folder index 0: 20_000.png loaded successfully from z:\\triple_mnist\\train\\000\\20_000.png.\n",
-      "folder index 0: 21_000.png loaded successfully from z:\\triple_mnist\\train\\000\\21_000.png.\n",
-      "folder index 0: 22_000.png loaded successfully from z:\\triple_mnist\\train\\000\\22_000.png.\n",
-      "folder index 0: 23_000.png loaded successfully from z:\\triple_mnist\\train\\000\\23_000.png.\n",
-      "folder index 0: 24_000.png loaded successfully from z:\\triple_mnist\\train\\000\\24_000.png.\n",
-      "folder index 0: 25_000.png loaded successfully from z:\\triple_mnist\\train\\000\\25_000.png.\n",
-      "folder index 0: 26_000.png loaded successfully from z:\\triple_mnist\\train\\000\\26_000.png.\n",
-      "folder index 0: 27_000.png loaded successfully from z:\\triple_mnist\\train\\000\\27_000.png.\n",
-      "folder index 0: 28_000.png loaded successfully from z:\\triple_mnist\\train\\000\\28_000.png.\n",
-      "folder index 0: 29_000.png loaded successfully from z:\\triple_mnist\\train\\000\\29_000.png.\n",
-      "folder index 0: 2_000.png loaded successfully from z:\\triple_mnist\\train\\000\\2_000.png.\n",
-      "folder index 0: 30_000.png loaded successfully from z:\\triple_mnist\\train\\000\\30_000.png.\n",
-      "folder index 0: 31_000.png loaded successfully from z:\\triple_mnist\\train\\000\\31_000.png.\n",
-      "folder index 0: 32_000.png loaded successfully from z:\\triple_mnist\\train\\000\\32_000.png.\n",
-      "folder index 0: 33_000.png loaded successfully from z:\\triple_mnist\\train\\000\\33_000.png.\n",
-      "folder index 0: 34_000.png loaded successfully from z:\\triple_mnist\\train\\000\\34_000.png.\n",
-      "folder index 0: 35_000.png loaded successfully from z:\\triple_mnist\\train\\000\\35_000.png.\n",
-      "folder index 0: 36_000.png loaded successfully from z:\\triple_mnist\\train\\000\\36_000.png.\n",
-      "folder index 0: 37_000.png loaded successfully from z:\\triple_mnist\\train\\000\\37_000.png.\n",
-      "folder index 0: 38_000.png loaded successfully from z:\\triple_mnist\\train\\000\\38_000.png.\n",
-      "folder index 0: 39_000.png loaded successfully from z:\\triple_mnist\\train\\000\\39_000.png.\n",
-      "folder index 0: 3_000.png loaded successfully from z:\\triple_mnist\\train\\000\\3_000.png.\n",
-      "folder index 0: 40_000.png loaded successfully from z:\\triple_mnist\\train\\000\\40_000.png.\n",
-      "folder index 0: 41_000.png loaded successfully from z:\\triple_mnist\\train\\000\\41_000.png.\n",
-      "folder index 0: 42_000.png loaded successfully from z:\\triple_mnist\\train\\000\\42_000.png.\n",
-      "folder index 0: 43_000.png loaded successfully from z:\\triple_mnist\\train\\000\\43_000.png.\n",
-      "folder index 0: 44_000.png loaded successfully from z:\\triple_mnist\\train\\000\\44_000.png.\n",
-      "folder index 0: 45_000.png loaded successfully from z:\\triple_mnist\\train\\000\\45_000.png.\n",
-      "folder index 0: 46_000.png loaded successfully from z:\\triple_mnist\\train\\000\\46_000.png.\n",
-      "folder index 0: 47_000.png loaded successfully from z:\\triple_mnist\\train\\000\\47_000.png.\n",
-      "folder index 0: 48_000.png loaded successfully from z:\\triple_mnist\\train\\000\\48_000.png.\n",
-      "folder index 0: 49_000.png loaded successfully from z:\\triple_mnist\\train\\000\\49_000.png.\n",
-      "folder index 0: 4_000.png loaded successfully from z:\\triple_mnist\\train\\000\\4_000.png.\n",
-      "folder index 0: 50_000.png loaded successfully from z:\\triple_mnist\\train\\000\\50_000.png.\n",
-      "folder index 0: 51_000.png loaded successfully from z:\\triple_mnist\\train\\000\\51_000.png.\n",
-      "folder index 0: 52_000.png loaded successfully from z:\\triple_mnist\\train\\000\\52_000.png.\n",
-      "folder index 0: 53_000.png loaded successfully from z:\\triple_mnist\\train\\000\\53_000.png.\n",
-      "folder index 0: 54_000.png loaded successfully from z:\\triple_mnist\\train\\000\\54_000.png.\n",
-      "folder index 0: 55_000.png loaded successfully from z:\\triple_mnist\\train\\000\\55_000.png.\n",
-      "folder index 0: 56_000.png loaded successfully from z:\\triple_mnist\\train\\000\\56_000.png.\n",
-      "folder index 0: 57_000.png loaded successfully from z:\\triple_mnist\\train\\000\\57_000.png.\n",
-      "folder index 0: 58_000.png loaded successfully from z:\\triple_mnist\\train\\000\\58_000.png.\n",
-      "folder index 0: 59_000.png loaded successfully from z:\\triple_mnist\\train\\000\\59_000.png.\n",
-      "folder index 0: 5_000.png loaded successfully from z:\\triple_mnist\\train\\000\\5_000.png.\n",
-      "folder index 0: 60_000.png loaded successfully from z:\\triple_mnist\\train\\000\\60_000.png.\n",
-      "folder index 0: 61_000.png loaded successfully from z:\\triple_mnist\\train\\000\\61_000.png.\n",
-      "folder index 0: 62_000.png loaded successfully from z:\\triple_mnist\\train\\000\\62_000.png.\n",
-      "folder index 0: 63_000.png loaded successfully from z:\\triple_mnist\\train\\000\\63_000.png.\n",
-      "folder index 0: 64_000.png loaded successfully from z:\\triple_mnist\\train\\000\\64_000.png.\n",
-      "folder index 0: 65_000.png loaded successfully from z:\\triple_mnist\\train\\000\\65_000.png.\n",
-      "folder index 0: 66_000.png loaded successfully from z:\\triple_mnist\\train\\000\\66_000.png.\n",
-      "folder index 0: 67_000.png loaded successfully from z:\\triple_mnist\\train\\000\\67_000.png.\n",
-      "folder index 0: 68_000.png loaded successfully from z:\\triple_mnist\\train\\000\\68_000.png.\n",
-      "folder index 0: 69_000.png loaded successfully from z:\\triple_mnist\\train\\000\\69_000.png.\n",
-      "folder index 0: 6_000.png loaded successfully from z:\\triple_mnist\\train\\000\\6_000.png.\n",
-      "folder index 0: 70_000.png loaded successfully from z:\\triple_mnist\\train\\000\\70_000.png.\n",
-      "folder index 0: 71_000.png loaded successfully from z:\\triple_mnist\\train\\000\\71_000.png.\n",
-      "folder index 0: 72_000.png loaded successfully from z:\\triple_mnist\\train\\000\\72_000.png.\n",
-      "folder index 0: 73_000.png loaded successfully from z:\\triple_mnist\\train\\000\\73_000.png.\n",
-      "folder index 0: 74_000.png loaded successfully from z:\\triple_mnist\\train\\000\\74_000.png.\n",
-      "folder index 0: 75_000.png loaded successfully from z:\\triple_mnist\\train\\000\\75_000.png.\n",
-      "folder index 0: 76_000.png loaded successfully from z:\\triple_mnist\\train\\000\\76_000.png.\n",
-      "folder index 0: 77_000.png loaded successfully from z:\\triple_mnist\\train\\000\\77_000.png.\n",
-      "folder index 0: 78_000.png loaded successfully from z:\\triple_mnist\\train\\000\\78_000.png.\n",
-      "folder index 0: 79_000.png loaded successfully from z:\\triple_mnist\\train\\000\\79_000.png.\n",
-      "folder index 0: 7_000.png loaded successfully from z:\\triple_mnist\\train\\000\\7_000.png.\n",
-      "folder index 0: 80_000.png loaded successfully from z:\\triple_mnist\\train\\000\\80_000.png.\n",
-      "folder index 0: 81_000.png loaded successfully from z:\\triple_mnist\\train\\000\\81_000.png.\n",
-      "folder index 0: 82_000.png loaded successfully from z:\\triple_mnist\\train\\000\\82_000.png.\n",
-      "folder index 0: 83_000.png loaded successfully from z:\\triple_mnist\\train\\000\\83_000.png.\n",
-      "folder index 0: 84_000.png loaded successfully from z:\\triple_mnist\\train\\000\\84_000.png.\n",
-      "folder index 0: 85_000.png loaded successfully from z:\\triple_mnist\\train\\000\\85_000.png.\n",
-      "folder index 0: 86_000.png loaded successfully from z:\\triple_mnist\\train\\000\\86_000.png.\n",
-      "folder index 0: 87_000.png loaded successfully from z:\\triple_mnist\\train\\000\\87_000.png.\n",
-      "folder index 0: 88_000.png loaded successfully from z:\\triple_mnist\\train\\000\\88_000.png.\n",
-      "folder index 0: 89_000.png loaded successfully from z:\\triple_mnist\\train\\000\\89_000.png.\n",
-      "folder index 0: 8_000.png loaded successfully from z:\\triple_mnist\\train\\000\\8_000.png.\n",
-      "folder index 0: 90_000.png loaded successfully from z:\\triple_mnist\\train\\000\\90_000.png.\n",
-      "folder index 0: 91_000.png loaded successfully from z:\\triple_mnist\\train\\000\\91_000.png.\n",
-      "folder index 0: 92_000.png loaded successfully from z:\\triple_mnist\\train\\000\\92_000.png.\n",
-      "folder index 0: 93_000.png loaded successfully from z:\\triple_mnist\\train\\000\\93_000.png.\n",
-      "folder index 0: 94_000.png loaded successfully from z:\\triple_mnist\\train\\000\\94_000.png.\n",
-      "folder index 0: 95_000.png loaded successfully from z:\\triple_mnist\\train\\000\\95_000.png.\n",
-      "folder index 0: 96_000.png loaded successfully from z:\\triple_mnist\\train\\000\\96_000.png.\n",
-      "folder index 0: 97_000.png loaded successfully from z:\\triple_mnist\\train\\000\\97_000.png.\n",
-      "folder index 0: 98_000.png loaded successfully from z:\\triple_mnist\\train\\000\\98_000.png.\n",
-      "folder index 0: 99_000.png loaded successfully from z:\\triple_mnist\\train\\000\\99_000.png.\n",
-      "folder index 0: 9_000.png loaded successfully from z:\\triple_mnist\\train\\000\\9_000.png.\n"
+      "processing folders: 100%|██████████| 640/640 [09:55<00:00,  1.08it/s]\n"
      ]
     }
    ],
@@ -298,23 +197,42 @@
     "if os.path.exists(training_preprocessed_path):\n",
     "    print('Training preprocessed images exist')\n",
     "else:\n",
+    "    # instead of looking to disk for each instance of the new file to find out the name, we're going to keep an in-memory index of the files we've created\n",
+    "    cropped_index = [0,0,0,0,0,0,0,0,0,0]\n",
+    "    files_loaded = 0 # running total of all triplet files loaded\n",
     "    all_folders = os.listdir(training_dir)\n",
     "    # Enumerate and load the directories\n",
-    "    cropped_images = []\n",
-    "    for index, image_folder in enumerate(all_folders):\n",
+    "    for index, image_folder in enumerate(tqdm(all_folders, desc='processing folders')):\n",
+    "        triplet_images = [] # a list of the images in the current folder \n",
     "        # now go through each directory and get the images\n",
     "        curr_files = os.listdir(os.path.join(training_dir, image_folder))\n",
     "        for image_file in curr_files:\n",
     "            file_path = os.path.join(training_dir, image_folder, image_file)\n",
     "            try:\n",
     "                image = Image.open(file_path)\n",
-    "                cropped_images.append(image)\n",
-    "                print(f'folder index {index}: {image_file} loaded successfully from {file_path}.')\n",
+    "                triplet_images.append(image)\n",
+    "                files_loaded += 1\n",
+    "                ##print(f'folder index {index}: {image_file} loaded successfully from {file_path}.')\n",
     "            except PermissionError as e:\n",
-    "                print(f'Permission denied, please launch VS Code as admin: {e}')\n",
+    "                print(f'Permission denied, please launch your IDE as admin: {e}')\n",
     "            except Exception as e:\n",
     "                print(f'An error occurred: {e}')\n",
-    "        break"
+    "        # now we have all the images in the folder, let's crop them\n",
+    "        crop_labels = list(image_folder)\n",
+    "        # loop through current triplet_images and pass to the crop_image function\n",
+    "        cropped_images = []\n",
+    "        for image in triplet_images:\n",
+    "            cropped_images = crop_image(image)\n",
+    "            # now we need to save these images to disk\n",
+    "            for i in range(3):\n",
+    "                # if this is the first time we've written to this label, we need to create the folder\n",
+    "                if int(cropped_index[int(crop_labels[i])]) == 0:\n",
+    "                    os.makedirs(os.path.join(training_preprocessed_path, crop_labels[i]), exist_ok=True)\n",
+    "                cropped_images[i].save(os.path.join(training_preprocessed_path, crop_labels[i], f'{cropped_index[int(crop_labels[i])]}_{crop_labels[i]}.png'))\n",
+    "                # increment the index for the label for the next image\n",
+    "                cropped_index[int(crop_labels[i])] += 1\n",
+    "\n",
+    "        #break # for now, we're only going to do the first folder"
    ]
   },
   {
